config/install/uninstall.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arcadectl-controller
  namespace: arcadectl-system
